--- a/EasyGroceries.Order.Application/EasyGroceries.Order.Application.csproj
+++ b/EasyGroceries.Order.Application/EasyGroceries.Order.Application.csproj
@@ -7,13 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Features\" />
-    <Folder Include="Filters\" />
-    <Folder Include="Validators\" />
-    <Folder Include="Services\" />
-    <Folder Include="Profile\" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EasyGroceries.Order.Domain\EasyGroceries.Order.Domain.csproj" />
   </ItemGroup>
 
 </Project>
