--- a/EasyGroceries.Services.OrderAPI/EasyGroceries.Services.OrderAPI.csproj
+++ b/EasyGroceries.Services.OrderAPI/EasyGroceries.Services.OrderAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\EasyGroceries.Order.Application\EasyGroceries.Order.Application.csproj" />
+    <ProjectReference Include="..\EasyGroceries.Order.Infrastructure\EasyGroceries.Order.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
