--- a/EasyGroceries.Services.OrderAPI/appsettings.json
+++ b/EasyGroceries.Services.OrderAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=EasyGroceries_Order;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000"
+  }
 }
