--- a/EasyGroceries.Services.OrderAPI/appsettings.json
+++ b/EasyGroceries.Services.OrderAPI/appsettings.json
@@ -7,9 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=EasyGroceries_Order;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=EasyGroceries_Order;Trusted_Connection=True;TrustServerCertificate=True",
+    "ServiceBusConnectionString": "Endpoint=sb://easygroceries.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=LHp8OWpHT9DrstgNvApGVQrCEed9xacew+ASbIk8VVY="
   },
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7000"
+  },
+  "TopicAndQueueNames": {
+    "GenerateShippingSlipQueue": "generateshippingslip"
   }
 }
